fixed desktop app info on mobile and google chrome

--- a/src/components/DesktopApps.css
+++ b/src/components/DesktopApps.css
@@ -107,7 +107,7 @@
 
 .area-2 {
   /* Styles for selectedArea 2 */
-  transform: translate(-50%, -60%);
+  transform: translate(-50%, -50%);
 }
 
 .area-3 {
@@ -198,12 +198,12 @@
     transform: translate(-50%, 30%);
   }
 }
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 960px) and (orientation: portrait) {
   .desktop-container {
     max-width: 100%;
-    height: 80vh;
-    min-height: auto;
-    /* min-height: 0%; */
+    /* height: 80vh; */
+    height: auto;
+    min-height: 80vh;
     flex-direction: column;
     justify-content: flex-start;
     overflow-y: hidden;
@@ -252,6 +252,73 @@
   .area-1 {
     /* Styles for selectedArea 1 */
     transform: translate(-50%, -70%);
+  }
+
+  .area-2 {
+    /* Styles for selectedArea 2 */
+    transform: translate(-50%, -56%);
+  }
+
+  .area-3 {
+    /* Styles for selectedArea 3 */
+    transform: translate(-50%, -75%);
+  }
+}
+
+@media screen and (max-width: 960px) and (orientation: landscape) {
+  .desktop-container {
+    max-width: 100%;
+    /* height: 80vh; */
+    height: auto;
+    min-height: 180vh;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow-y: hidden;
+  }
+
+  .desktop-wrapper {
+    flex-direction: column;
+  }
+
+  .desktop-app-image {
+    width: 80svh;
+    height: auto;
+    padding: 20px;
+  }
+
+  .desktop-app-description {
+    padding-top: 10px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+  }
+
+  .desktop-image {
+    max-width: 100%;
+    height: auto;
+    padding-top: 0;
+    padding-bottom: 10;
+    padding: 5px;
+  }
+
+  .desktop-app-info {
+    position: absolute;
+    top: 50%; /* Adjust as needed */
+    left: 50%; /* Adjust as needed */
+    transform: translate(-50%, -50%);
+    width: 80%; /* Adjust as needed */
+    height: auto;
+    max-height: fit-content;
+    background-color: white;
+    border-radius: 30px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    padding: 20px;
+    z-index: 999;
+  }
+
+  .area-1 {
+    /* Styles for selectedArea 1 */
+    transform: translate(-50%, -75%);
   }
 
   .area-2 {
